<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    app:cardElevation="2dp"
    android:clickable="true"
    android:backgroundTint="#FFFFFF"
    android:foreground="?selectableItemBackground"
    android:layout_margin="5dp"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_margin="10dp"
        android:padding="8dp">


        <ImageView
            android:id="@+id/imageTv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textTitTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageTv"
            android:layout_margin="10dp"
            android:text="@string/title"
            android:textColor="#5B1A05"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitTv"
            android:layout_toEndOf="@id/imageTv"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/description" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>